Bug 381812 - Discover does not show notification about available updates
Summary: Discover does not show notification about available updates
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Updates (other bugs)
Version First Reported In: 5.11.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-06-30 03:47 UTC by Patrick Silva
Modified: 2018-01-08 19:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2017-06-30 03:47:46 UTC
"show a message in a popup" is checked in notifications kcm but Discover never shows a notification when some update is available.

It affects Discover 5.10.3 on Arch and Discover from neon dev.
Comment 1 Patrick Silva 2017-09-17 03:38:15 UTC
Still valid for 5.11 beta.
Comment 2 Aleix Pol 2017-11-08 15:02:11 UTC
Git commit 8576e93351646c02325cda94ad1867ae0af9605c by Aleix Pol.
Committed on 08/11/2017 at 14:59.
Pushed by apol into branch 'Plasma/5.11'.

Remove weirdly long timer to display notifications

M  +1    -2    notifier/DiscoverNotifier.cpp

https://commits.kde.org/discover/8576e93351646c02325cda94ad1867ae0af9605c
Comment 3 Nate Graham 2017-11-23 02:09:23 UTC
*** Bug 387211 has been marked as a duplicate of this bug. ***
Comment 4 Patrick Silva 2017-12-03 13:11:21 UTC
still no notification on Arch Linux and Neon user edition, both running discover 5.11.4.
Comment 5 Aleix Pol 2018-01-08 19:32:28 UTC
Git commit dd6ac1eeea8fd43efc50681920d9e9a0e283afec by Aleix Pol.
Committed on 08/01/2018 at 19:27.
Pushed by apol into branch 'Plasma/5.11'.

Use the right component name

M  +1    -1    notifier/DiscoverNotifier.cpp

https://commits.kde.org/discover/dd6ac1eeea8fd43efc50681920d9e9a0e283afec