Remove weirdly long timer to display notifications

BUG: 381812